💄 Fix certain input visibilities in the editor

--- a/src/input/editor.scss
+++ b/src/input/editor.scss
@@ -13,6 +13,10 @@
 		.components-base-control__field {
 			margin-bottom: 0;
 		}
+		
+		.components-text-control__input {
+			width: 1em;
+		}
 	}
 	
 	&.is-type-file .components-base-control {
